--- a/extra/17-orario-dipendenti.lyx
+++ b/extra/17-orario-dipendenti.lyx
@@ -704,17 +704,6 @@ n", DIPENDENTE_MOLESTO, h_lav, m_lav);
 \end_layout
 
 \begin_layout Standard
-\begin_inset VSpace defskip
-\end_inset
-
-
-\begin_inset VSpace defskip
-\end_inset
-
-
-\end_layout
-
-\begin_layout Standard
 \begin_inset Newpage clearpage
 \end_inset
 
@@ -1445,11 +1434,7 @@ void computeEmployee(int index, int* hh, int* mm) {
 \end_layout
 
 \begin_layout Standard
-\begin_inset VSpace defskip
-\end_inset
-
-
-\begin_inset VSpace defskip
+\begin_inset Newpage clearpage
 \end_inset
 
 
@@ -1460,16 +1445,742 @@ Azienda in crescita
 \end_layout
 
 \begin_layout Standard
-Questa soluzione verrà fornita in un successivo aggiornamento del presente
- documento.
+\begin_inset listings
+lstparams "language=C,numbers=left,basicstyle={\ttfamily},breaklines=true,showstringspaces=false,tabsize=2"
+inline false
+status open
+
+\begin_layout Plain Layout
+
+\begin_inset Caption Standard
+
+\begin_layout Plain Layout
+Orario dipendenti (Azienda in crescita)
 \end_layout
 
-\begin_layout Standard
-\begin_inset VSpace defskip
 \end_inset
 
 
-\begin_inset VSpace defskip
+\end_layout
+
+\begin_layout Plain Layout
+
+#include <stdio.h>
+\end_layout
+
+\begin_layout Plain Layout
+
+#include <string.h>
+\end_layout
+
+\begin_layout Plain Layout
+
+#include <stdlib.h>
+\end_layout
+
+\begin_layout Plain Layout
+
+#define ID_LEN 9
+\end_layout
+
+\begin_layout Plain Layout
+
+#define ELEMENT_NOT_FOUND NULL
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+const char* inputFileName = "passaggi.txt";
+\end_layout
+
+\begin_layout Plain Layout
+
+const char* outputFileName = "ore_effettive.txt";
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+typedef struct employee_s {
+\end_layout
+
+\begin_layout Plain Layout
+
+	int hh;
+\end_layout
+
+\begin_layout Plain Layout
+
+	int mm;
+\end_layout
+
+\begin_layout Plain Layout
+
+	struct employee_s* next;
+\end_layout
+
+\begin_layout Plain Layout
+
+} employee_t;
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+typedef struct index_s {
+\end_layout
+
+\begin_layout Plain Layout
+
+	char id[ID_LEN];
+\end_layout
+
+\begin_layout Plain Layout
+
+	employee_t* entries;
+\end_layout
+
+\begin_layout Plain Layout
+
+	struct index_s* next;
+\end_layout
+
+\begin_layout Plain Layout
+
+} index_t;
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+index_t* timeList;
+\end_layout
+
+\begin_layout Plain Layout
+
+index_t* getIndexRecord(char* id);
+\end_layout
+
+\begin_layout Plain Layout
+
+index_t* addEmployee(char* id);
+\end_layout
+
+\begin_layout Plain Layout
+
+index_t* enqueue(index_t* index, int h, int m);
+\end_layout
+
+\begin_layout Plain Layout
+
+void computeEmployee(index_t* index, int* hh, int* mm);
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+int main() {
+\end_layout
+
+\begin_layout Plain Layout
+
+	FILE* f_in;
+\end_layout
+
+\begin_layout Plain Layout
+
+	FILE* f_out;
+\end_layout
+
+\begin_layout Plain Layout
+
+	char id[ID_LEN];
+\end_layout
+
+\begin_layout Plain Layout
+
+	int h, m;
+\end_layout
+
+\begin_layout Plain Layout
+
+	index_t* tmp;
+\end_layout
+
+\begin_layout Plain Layout
+
+	f_in = fopen(inputFileName, "r");
+\end_layout
+
+\begin_layout Plain Layout
+
+	if (!f_in) {
+\end_layout
+
+\begin_layout Plain Layout
+
+		printf("Impossibile aprire il file di input
+\backslash
+n");
+\end_layout
+
+\begin_layout Plain Layout
+
+		return -1;
+\end_layout
+
+\begin_layout Plain Layout
+
+	}
+\end_layout
+
+\begin_layout Plain Layout
+
+	fscanf(f_in, "%d %d %s", &h, &m, id);
+\end_layout
+
+\begin_layout Plain Layout
+
+	while (!feof(f_in)) {
+\end_layout
+
+\begin_layout Plain Layout
+
+		tmp = getIndexRecord(id);
+\end_layout
+
+\begin_layout Plain Layout
+
+		if (tmp == ELEMENT_NOT_FOUND) {
+\end_layout
+
+\begin_layout Plain Layout
+
+			tmp = addEmployee(id);
+\end_layout
+
+\begin_layout Plain Layout
+
+		}
+\end_layout
+
+\begin_layout Plain Layout
+
+		if (tmp == ELEMENT_NOT_FOUND) {
+\end_layout
+
+\begin_layout Plain Layout
+
+			fclose(f_in);
+\end_layout
+
+\begin_layout Plain Layout
+
+			return -1;
+\end_layout
+
+\begin_layout Plain Layout
+
+		}
+\end_layout
+
+\begin_layout Plain Layout
+
+		enqueue(tmp, h, m);
+\end_layout
+
+\begin_layout Plain Layout
+
+		fscanf(f_in, "%d %d %s", &h, &m, id);
+\end_layout
+
+\begin_layout Plain Layout
+
+	}
+\end_layout
+
+\begin_layout Plain Layout
+
+	fclose(f_in);
+\end_layout
+
+\begin_layout Plain Layout
+
+	f_out = fopen(outputFileName, "w");
+\end_layout
+
+\begin_layout Plain Layout
+
+	if (!f_out) {
+\end_layout
+
+\begin_layout Plain Layout
+
+		printf("Impossibile creare il file di output
+\backslash
+n");
+\end_layout
+
+\begin_layout Plain Layout
+
+		return -2;
+\end_layout
+
+\begin_layout Plain Layout
+
+	}
+\end_layout
+
+\begin_layout Plain Layout
+
+	for (tmp = timeList; tmp != NULL; tmp = tmp->next) {
+\end_layout
+
+\begin_layout Plain Layout
+
+		computeEmployee(tmp, &h, &m);
+\end_layout
+
+\begin_layout Plain Layout
+
+		fprintf(f_out, "%s %d h %d m
+\backslash
+n", tmp->id, h, m);
+\end_layout
+
+\begin_layout Plain Layout
+
+	}
+\end_layout
+
+\begin_layout Plain Layout
+
+	fclose(f_out);
+\end_layout
+
+\begin_layout Plain Layout
+
+	return 0;
+\end_layout
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+index_t* getIndexRecord(char* id) {
+\end_layout
+
+\begin_layout Plain Layout
+
+	index_t* tmp;
+\end_layout
+
+\begin_layout Plain Layout
+
+	for (tmp = timeList; tmp != NULL; tmp = tmp->next) {
+\end_layout
+
+\begin_layout Plain Layout
+
+		if (strcmp(id, tmp->id) == 0) {
+\end_layout
+
+\begin_layout Plain Layout
+
+			return tmp;
+\end_layout
+
+\begin_layout Plain Layout
+
+		}
+\end_layout
+
+\begin_layout Plain Layout
+
+	}
+\end_layout
+
+\begin_layout Plain Layout
+
+	return ELEMENT_NOT_FOUND;
+\end_layout
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+index_t* addEmployee(char* id) {
+\end_layout
+
+\begin_layout Plain Layout
+
+	index_t* tmp; 
+\end_layout
+
+\begin_layout Plain Layout
+
+	index_t* prev;
+\end_layout
+
+\begin_layout Plain Layout
+
+	tmp = (index_t*) malloc(sizeof(index_t));
+\end_layout
+
+\begin_layout Plain Layout
+
+	if (!tmp) {
+\end_layout
+
+\begin_layout Plain Layout
+
+		printf("Errore: impossibile allocare memoria
+\backslash
+n");
+\end_layout
+
+\begin_layout Plain Layout
+
+		return ELEMENT_NOT_FOUND;
+\end_layout
+
+\begin_layout Plain Layout
+
+	}
+\end_layout
+
+\begin_layout Plain Layout
+
+	strcpy(tmp->id, id);
+\end_layout
+
+\begin_layout Plain Layout
+
+	tmp->next = NULL;
+\end_layout
+
+\begin_layout Plain Layout
+
+	tmp->entries = NULL;
+\end_layout
+
+\begin_layout Plain Layout
+
+	prev = timeList;
+\end_layout
+
+\begin_layout Plain Layout
+
+	if (prev) {
+\end_layout
+
+\begin_layout Plain Layout
+
+		while (prev->next) {
+\end_layout
+
+\begin_layout Plain Layout
+
+			prev = prev->next;
+\end_layout
+
+\begin_layout Plain Layout
+
+		}
+\end_layout
+
+\begin_layout Plain Layout
+
+		prev->next = tmp;
+\end_layout
+
+\begin_layout Plain Layout
+
+	} else {
+\end_layout
+
+\begin_layout Plain Layout
+
+		timeList = tmp;
+\end_layout
+
+\begin_layout Plain Layout
+
+	}
+\end_layout
+
+\begin_layout Plain Layout
+
+	return tmp;
+\end_layout
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+index_t* enqueue(index_t* index, int h, int m) {
+\end_layout
+
+\begin_layout Plain Layout
+
+	employee_t* tmp = (employee_t*) malloc(sizeof(employee_t));
+\end_layout
+
+\begin_layout Plain Layout
+
+	employee_t* aux = index->entries;
+\end_layout
+
+\begin_layout Plain Layout
+
+	if (!tmp) {
+\end_layout
+
+\begin_layout Plain Layout
+
+		printf("Errore: impossibile allocare memoria
+\backslash
+n");
+\end_layout
+
+\begin_layout Plain Layout
+
+		return ELEMENT_NOT_FOUND;
+\end_layout
+
+\begin_layout Plain Layout
+
+	}
+\end_layout
+
+\begin_layout Plain Layout
+
+	tmp->hh = h;
+\end_layout
+
+\begin_layout Plain Layout
+
+	tmp->mm = m;
+\end_layout
+
+\begin_layout Plain Layout
+
+	tmp->next = NULL;
+\end_layout
+
+\begin_layout Plain Layout
+
+	if (aux == NULL) {
+\end_layout
+
+\begin_layout Plain Layout
+
+		index->entries = tmp;
+\end_layout
+
+\begin_layout Plain Layout
+
+	} else {
+\end_layout
+
+\begin_layout Plain Layout
+
+		while (aux->next != NULL) {
+\end_layout
+
+\begin_layout Plain Layout
+
+			aux = aux->next;
+\end_layout
+
+\begin_layout Plain Layout
+
+		}
+\end_layout
+
+\begin_layout Plain Layout
+
+		aux->next = tmp;
+\end_layout
+
+\begin_layout Plain Layout
+
+	}
+\end_layout
+
+\begin_layout Plain Layout
+
+	return index;
+\end_layout
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+void computeEmployee(index_t* index, int* hh, int* mm) {
+\end_layout
+
+\begin_layout Plain Layout
+
+	employee_t *in, *out;
+\end_layout
+
+\begin_layout Plain Layout
+
+	*hh = 0;
+\end_layout
+
+\begin_layout Plain Layout
+
+	*mm = 0;
+\end_layout
+
+\begin_layout Plain Layout
+
+	in = index->entries;
+\end_layout
+
+\begin_layout Plain Layout
+
+	while (in != NULL) {
+\end_layout
+
+\begin_layout Plain Layout
+
+		out = in->next;
+\end_layout
+
+\begin_layout Plain Layout
+
+		if (out != NULL) {
+\end_layout
+
+\begin_layout Plain Layout
+
+			*hh += out->hh - in->hh;
+\end_layout
+
+\begin_layout Plain Layout
+
+			*mm += out->mm - in->mm;
+\end_layout
+
+\begin_layout Plain Layout
+
+			/* adjust */
+\end_layout
+
+\begin_layout Plain Layout
+
+			if (*mm >= 60) {
+\end_layout
+
+\begin_layout Plain Layout
+
+				*mm -= 60;
+\end_layout
+
+\begin_layout Plain Layout
+
+				*hh ++;
+\end_layout
+
+\begin_layout Plain Layout
+
+			}
+\end_layout
+
+\begin_layout Plain Layout
+
+			if (*mm < 0) {
+\end_layout
+
+\begin_layout Plain Layout
+
+				*hh --;
+\end_layout
+
+\begin_layout Plain Layout
+
+				*mm += 60;
+\end_layout
+
+\begin_layout Plain Layout
+
+			}
+\end_layout
+
+\begin_layout Plain Layout
+
+			in = out->next;
+\end_layout
+
+\begin_layout Plain Layout
+
+		}
+\end_layout
+
+\begin_layout Plain Layout
+
+	} /* end while */
+\end_layout
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Newpage clearpage
 \end_inset
 
 
@@ -1480,8 +2191,911 @@ Rivolta sindacale
 \end_layout
 
 \begin_layout Standard
-Questa soluzione verrà fornita in un successivo aggiornamento del presente
- documento.
+\begin_inset listings
+lstparams "language=C,numbers=left,basicstyle={\ttfamily},breaklines=true,showstringspaces=false,tabsize=2"
+inline false
+status open
+
+\begin_layout Plain Layout
+
+\begin_inset Caption Standard
+
+\begin_layout Plain Layout
+Orario dipendenti (Rivolta sindacale)
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Plain Layout
+
+#include <stdio.h>
+\end_layout
+
+\begin_layout Plain Layout
+
+#include <string.h>
+\end_layout
+
+\begin_layout Plain Layout
+
+#include <stdlib.h>
+\end_layout
+
+\begin_layout Plain Layout
+
+#define ID_LEN 9
+\end_layout
+
+\begin_layout Plain Layout
+
+#define ELEMENT_NOT_FOUND NULL
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+const char* inputFileName = "passaggi.txt";
+\end_layout
+
+\begin_layout Plain Layout
+
+const char* outputFileName = "ore_effettive.txt";
+\end_layout
+
+\begin_layout Plain Layout
+
+const char* prefix = "xfA";
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+typedef struct employee_s {
+\end_layout
+
+\begin_layout Plain Layout
+
+	int hh;
+\end_layout
+
+\begin_layout Plain Layout
+
+	int mm;
+\end_layout
+
+\begin_layout Plain Layout
+
+	struct employee_s* next;
+\end_layout
+
+\begin_layout Plain Layout
+
+} employee_t;
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+typedef struct index_s {
+\end_layout
+
+\begin_layout Plain Layout
+
+	char id[ID_LEN];
+\end_layout
+
+\begin_layout Plain Layout
+
+	employee_t* entries;
+\end_layout
+
+\begin_layout Plain Layout
+
+	struct index_s* next;
+\end_layout
+
+\begin_layout Plain Layout
+
+} index_t;
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+index_t* timeList;
+\end_layout
+
+\begin_layout Plain Layout
+
+index_t* getIndexRecord(char* id);
+\end_layout
+
+\begin_layout Plain Layout
+
+index_t* addEmployee(char* id);
+\end_layout
+
+\begin_layout Plain Layout
+
+index_t* enqueue(index_t* index, int h, int m);
+\end_layout
+
+\begin_layout Plain Layout
+
+void computeEmployee(index_t* index, int* hh, int* mm);
+\end_layout
+
+\begin_layout Plain Layout
+
+int startsWith(const char* baseStr, const char* subStr);
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+int main() {
+\end_layout
+
+\begin_layout Plain Layout
+
+	FILE* f_in;
+\end_layout
+
+\begin_layout Plain Layout
+
+	FILE* f_out;
+\end_layout
+
+\begin_layout Plain Layout
+
+	char id[ID_LEN];
+\end_layout
+
+\begin_layout Plain Layout
+
+	char id_min[ID_LEN];
+\end_layout
+
+\begin_layout Plain Layout
+
+	int h, m, count;
+\end_layout
+
+\begin_layout Plain Layout
+
+	float avg, min;
+\end_layout
+
+\begin_layout Plain Layout
+
+	index_t* tmp;
+\end_layout
+
+\begin_layout Plain Layout
+
+	f_in = fopen(inputFileName, "r");
+\end_layout
+
+\begin_layout Plain Layout
+
+	if (!f_in) {
+\end_layout
+
+\begin_layout Plain Layout
+
+		printf("Impossibile aprire il file di input
+\backslash
+n");
+\end_layout
+
+\begin_layout Plain Layout
+
+		return -1;
+\end_layout
+
+\begin_layout Plain Layout
+
+	}
+\end_layout
+
+\begin_layout Plain Layout
+
+	fscanf(f_in, "%d %d %s", &h, &m, id);
+\end_layout
+
+\begin_layout Plain Layout
+
+	while (!feof(f_in)) {
+\end_layout
+
+\begin_layout Plain Layout
+
+		if (startsWith(id, prefix) != 0) {
+\end_layout
+
+\begin_layout Plain Layout
+
+			tmp = getIndexRecord(id);
+\end_layout
+
+\begin_layout Plain Layout
+
+			if (tmp == ELEMENT_NOT_FOUND) {
+\end_layout
+
+\begin_layout Plain Layout
+
+				tmp = addEmployee(id);
+\end_layout
+
+\begin_layout Plain Layout
+
+			}
+\end_layout
+
+\begin_layout Plain Layout
+
+			if (tmp == ELEMENT_NOT_FOUND) {
+\end_layout
+
+\begin_layout Plain Layout
+
+				fclose(f_in);
+\end_layout
+
+\begin_layout Plain Layout
+
+				return -1;
+\end_layout
+
+\begin_layout Plain Layout
+
+			}
+\end_layout
+
+\begin_layout Plain Layout
+
+			enqueue(tmp, h, m);
+\end_layout
+
+\begin_layout Plain Layout
+
+		}
+\end_layout
+
+\begin_layout Plain Layout
+
+		fscanf(f_in, "%d %d %s", &h, &m, id);
+\end_layout
+
+\begin_layout Plain Layout
+
+	}
+\end_layout
+
+\begin_layout Plain Layout
+
+	fclose(f_in);
+\end_layout
+
+\begin_layout Plain Layout
+
+	f_out = fopen(outputFileName, "w");
+\end_layout
+
+\begin_layout Plain Layout
+
+	if (!f_out) {
+\end_layout
+
+\begin_layout Plain Layout
+
+		printf("Impossibile creare il file di output
+\backslash
+n");
+\end_layout
+
+\begin_layout Plain Layout
+
+		return -2;
+\end_layout
+
+\begin_layout Plain Layout
+
+	}
+\end_layout
+
+\begin_layout Plain Layout
+
+	min = 0;
+\end_layout
+
+\begin_layout Plain Layout
+
+	strcpy(id_min, "");
+\end_layout
+
+\begin_layout Plain Layout
+
+	avg = 0;
+\end_layout
+
+\begin_layout Plain Layout
+
+	count = 0; 
+\end_layout
+
+\begin_layout Plain Layout
+
+	for (tmp = timeList; tmp != NULL; tmp = tmp->next) {
+\end_layout
+
+\begin_layout Plain Layout
+
+		computeEmployee(tmp, &h, &m);
+\end_layout
+
+\begin_layout Plain Layout
+
+		fprintf(f_out, "%s %d h %d m
+\backslash
+n", tmp->id, h, m);
+\end_layout
+
+\begin_layout Plain Layout
+
+	    if (h * 60 + m < min) {
+\end_layout
+
+\begin_layout Plain Layout
+
+			min = h * 60 + m;
+\end_layout
+
+\begin_layout Plain Layout
+
+			strcpy(id_min, id);
+\end_layout
+
+\begin_layout Plain Layout
+
+		}
+\end_layout
+
+\begin_layout Plain Layout
+
+		count ++;
+\end_layout
+
+\begin_layout Plain Layout
+
+	}
+\end_layout
+
+\begin_layout Plain Layout
+
+	fclose(f_out);
+\end_layout
+
+\begin_layout Plain Layout
+
+	if (count != 0) {
+\end_layout
+
+\begin_layout Plain Layout
+
+		avg = avg / count;
+\end_layout
+
+\begin_layout Plain Layout
+
+	}
+\end_layout
+
+\begin_layout Plain Layout
+
+	printf("%s ha lavorato solo %d ore e %d minuti.
+\backslash
+n", id_min, (int) min / 60, (int) min % 60);
+\end_layout
+
+\begin_layout Plain Layout
+
+	printf("In media hanno lavorato %d ore e %d minuti
+\backslash
+n", (int) avg / 60, (int) avg % 60);
+\end_layout
+
+\begin_layout Plain Layout
+
+	return 0;
+\end_layout
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+index_t* getIndexRecord(char* id) {
+\end_layout
+
+\begin_layout Plain Layout
+
+	index_t* tmp;
+\end_layout
+
+\begin_layout Plain Layout
+
+	for (tmp = timeList; tmp != NULL; tmp = tmp->next) {
+\end_layout
+
+\begin_layout Plain Layout
+
+		if (strcmp(id, tmp->id) == 0) {
+\end_layout
+
+\begin_layout Plain Layout
+
+			return tmp;
+\end_layout
+
+\begin_layout Plain Layout
+
+		}
+\end_layout
+
+\begin_layout Plain Layout
+
+	}
+\end_layout
+
+\begin_layout Plain Layout
+
+	return ELEMENT_NOT_FOUND;
+\end_layout
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+index_t* addEmployee(char* id) {
+\end_layout
+
+\begin_layout Plain Layout
+
+	index_t* tmp; 
+\end_layout
+
+\begin_layout Plain Layout
+
+	index_t* prev;
+\end_layout
+
+\begin_layout Plain Layout
+
+	tmp = (index_t*) malloc(sizeof(index_t));
+\end_layout
+
+\begin_layout Plain Layout
+
+	if (!tmp) {
+\end_layout
+
+\begin_layout Plain Layout
+
+		printf("Errore: impossibile allocare memoria
+\backslash
+n");
+\end_layout
+
+\begin_layout Plain Layout
+
+		return ELEMENT_NOT_FOUND;
+\end_layout
+
+\begin_layout Plain Layout
+
+	}
+\end_layout
+
+\begin_layout Plain Layout
+
+	strcpy(tmp->id, id);
+\end_layout
+
+\begin_layout Plain Layout
+
+	tmp->next = NULL;
+\end_layout
+
+\begin_layout Plain Layout
+
+	tmp->entries = NULL;
+\end_layout
+
+\begin_layout Plain Layout
+
+	prev = timeList;
+\end_layout
+
+\begin_layout Plain Layout
+
+	if (prev) {
+\end_layout
+
+\begin_layout Plain Layout
+
+		while (prev->next) {
+\end_layout
+
+\begin_layout Plain Layout
+
+			prev = prev->next;
+\end_layout
+
+\begin_layout Plain Layout
+
+		}
+\end_layout
+
+\begin_layout Plain Layout
+
+		prev->next = tmp;
+\end_layout
+
+\begin_layout Plain Layout
+
+	} else {
+\end_layout
+
+\begin_layout Plain Layout
+
+		timeList = tmp;
+\end_layout
+
+\begin_layout Plain Layout
+
+	}
+\end_layout
+
+\begin_layout Plain Layout
+
+	return tmp;
+\end_layout
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+index_t* enqueue(index_t* index, int h, int m) {
+\end_layout
+
+\begin_layout Plain Layout
+
+	employee_t* tmp = (employee_t*) malloc(sizeof(employee_t));
+\end_layout
+
+\begin_layout Plain Layout
+
+	employee_t* aux = index->entries;
+\end_layout
+
+\begin_layout Plain Layout
+
+	if (!tmp) {
+\end_layout
+
+\begin_layout Plain Layout
+
+		printf("Errore: impossibile allocare memoria
+\backslash
+n");
+\end_layout
+
+\begin_layout Plain Layout
+
+		return ELEMENT_NOT_FOUND;
+\end_layout
+
+\begin_layout Plain Layout
+
+	}
+\end_layout
+
+\begin_layout Plain Layout
+
+	tmp->hh = h;
+\end_layout
+
+\begin_layout Plain Layout
+
+	tmp->mm = m;
+\end_layout
+
+\begin_layout Plain Layout
+
+	tmp->next = NULL;
+\end_layout
+
+\begin_layout Plain Layout
+
+	if (aux == NULL) {
+\end_layout
+
+\begin_layout Plain Layout
+
+		index->entries = tmp;
+\end_layout
+
+\begin_layout Plain Layout
+
+	} else {
+\end_layout
+
+\begin_layout Plain Layout
+
+		while (aux->next != NULL) {
+\end_layout
+
+\begin_layout Plain Layout
+
+			aux = aux->next;
+\end_layout
+
+\begin_layout Plain Layout
+
+		}
+\end_layout
+
+\begin_layout Plain Layout
+
+		aux->next = tmp;
+\end_layout
+
+\begin_layout Plain Layout
+
+	}
+\end_layout
+
+\begin_layout Plain Layout
+
+	return index;
+\end_layout
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+void computeEmployee(index_t* index, int* hh, int* mm) {
+\end_layout
+
+\begin_layout Plain Layout
+
+	employee_t *in, *out;
+\end_layout
+
+\begin_layout Plain Layout
+
+	*hh = 0;
+\end_layout
+
+\begin_layout Plain Layout
+
+	*mm = 0;
+\end_layout
+
+\begin_layout Plain Layout
+
+	in = index->entries;
+\end_layout
+
+\begin_layout Plain Layout
+
+	while (in != NULL) {
+\end_layout
+
+\begin_layout Plain Layout
+
+		out = in->next;
+\end_layout
+
+\begin_layout Plain Layout
+
+		if (out != NULL) {
+\end_layout
+
+\begin_layout Plain Layout
+
+			*hh += out->hh - in->hh;
+\end_layout
+
+\begin_layout Plain Layout
+
+			*mm += out->mm - in->mm;
+\end_layout
+
+\begin_layout Plain Layout
+
+			/* adjust */
+\end_layout
+
+\begin_layout Plain Layout
+
+			if (*mm >= 60) {
+\end_layout
+
+\begin_layout Plain Layout
+
+				*mm -= 60;
+\end_layout
+
+\begin_layout Plain Layout
+
+				*hh ++;
+\end_layout
+
+\begin_layout Plain Layout
+
+			}
+\end_layout
+
+\begin_layout Plain Layout
+
+			if (*mm < 0) {
+\end_layout
+
+\begin_layout Plain Layout
+
+				*hh --;
+\end_layout
+
+\begin_layout Plain Layout
+
+				*mm += 60;
+\end_layout
+
+\begin_layout Plain Layout
+
+			}
+\end_layout
+
+\begin_layout Plain Layout
+
+			in = out->next;
+\end_layout
+
+\begin_layout Plain Layout
+
+		}
+\end_layout
+
+\begin_layout Plain Layout
+
+	} /* end while */
+\end_layout
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\begin_layout Plain Layout
+
+int startsWith(const char* baseStr, const char* subStr) {
+\end_layout
+
+\begin_layout Plain Layout
+
+	int i, len;
+\end_layout
+
+\begin_layout Plain Layout
+
+	len = strlen(subStr);
+\end_layout
+
+\begin_layout Plain Layout
+
+	if (strlen(baseStr) < len) {
+\end_layout
+
+\begin_layout Plain Layout
+
+		return 0;
+\end_layout
+
+\begin_layout Plain Layout
+
+	}
+\end_layout
+
+\begin_layout Plain Layout
+
+	for (i = 0; i < len; i++) {
+\end_layout
+
+\begin_layout Plain Layout
+
+		if (baseStr[i] != subStr[i]) {
+\end_layout
+
+\begin_layout Plain Layout
+
+			return 0;
+\end_layout
+
+\begin_layout Plain Layout
+
+		}
+\end_layout
+
+\begin_layout Plain Layout
+
+	}
+\end_layout
+
+\begin_layout Plain Layout
+
+	return 1;
+\end_layout
+
+\begin_layout Plain Layout
+
+}
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Standard
