[01 boolean] update to academic year 2016/17

--- a/01-boolean-algebra/01-boolean-algebra.lyx
+++ b/01-boolean-algebra/01-boolean-algebra.lyx
@@ -209,12 +209,12 @@ Esercitazione 1
 \begin_inset Newline newline
 \end_inset
 
-22 Ottobre 2015
+03 Novembre 2016
 \begin_inset Argument 1
 status open
 
 \begin_layout Plain Layout
-22 Ottobre 2015
+06 Novembre 2016
 \end_layout
 
 \end_inset
