--- a/02-binary/02-binary.lyx
+++ b/02-binary/02-binary.lyx
@@ -213,12 +213,12 @@ Esercitazione 2
 \begin_inset Newline newline
 \end_inset
 
-22 Ottobre 2015
+03 Novembre 2016
 \begin_inset Argument 1
 status open
 
 \begin_layout Plain Layout
-22 Ottobre 2015
+03 Novembre 2016
 \end_layout
 
 \end_inset
@@ -3981,9 +3981,9 @@ Servono quindi 7 bit per rappresentare il modulo di
 Infatti con 8 bit possiamo rappresentare numeri da 
 \begin_inset Formula 
 \begin{eqnarray*}
-[-2^{N-1} & ; & 2^{N-1}-1]\\
-{}[-2^{8-1} & ; & 2^{8-1}-1]\\
-{}[-128 & ; & 127]
+[-2^{N-1} & ; & 2^{N-1}-1]\\{}
+[-2^{8-1} & ; & 2^{8-1}-1]\\{}
+[-128 & ; & 127]
 \end{eqnarray*}
 
 \end_inset
@@ -4070,8 +4070,8 @@ Servono quindi 5 bit per rappresentare il modulo di
 Infatti con 6 bit possiamo rappresentare numeri da 
 \begin_inset Formula 
 \begin{eqnarray*}
-[-2^{6-1} & ; & 2^{6-1}-1]\\
-{}[-32 & ; & 31]
+[-2^{6-1} & ; & 2^{6-1}-1]\\{}
+[-32 & ; & 31]
 \end{eqnarray*}
 
 \end_inset
@@ -4157,8 +4157,8 @@ Servono quindi 9 bit per rappresentare il modulo di
 Infatti con 10 bit possiamo rappresentare numeri da 
 \begin_inset Formula 
 \begin{eqnarray*}
-[-2^{10-1} & ; & 2^{10-1}-1]\\
-{}[-512 & ; & 511]
+[-2^{10-1} & ; & 2^{10-1}-1]\\{}
+[-512 & ; & 511]
 \end{eqnarray*}
 
 \end_inset
@@ -4251,8 +4251,8 @@ Servono quindi 9 bit per rappresentare il modulo di
  
 \begin_inset Formula 
 \begin{eqnarray*}
-[-2^{9-1} & ; & 2^{9-1}-1]\\
-{}[-256 & ; & 255]
+[-2^{9-1} & ; & 2^{9-1}-1]\\{}
+[-256 & ; & 255]
 \end{eqnarray*}
 
 \end_inset
